--- a/_config.yml
+++ b/_config.yml
@@ -4,12 +4,12 @@
 
 # Site
 title: gopher
-subtitle:
-description:
+subtitle: blog
+description: 
 keywords:
 author: can
-language:
-timezone:
+language: zh
+timezone: 
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
